# mailadm

./: .gitignore  CHANGELOG.rst  CHANGELOG.txt  Dockerfile  README.md  README.rst  example_mailadm.config  example_mailadm.ini  example_tadm.ini  gunicorn.conf.py  install_mailadm.sh  mailadm.service  pyproject.toml  setup.cfg  setup.py  tadm.service  tox.ini  uninstall_mailadm.sh
.circleci/: config.yml
.github/workflows/: ci.yml
ci/: Makefile
ci/docker-mailserver/: Dockerfile
doc/: Makefile  conf.py  index.rst
scripts/: imap_test.py  mailadm.sh  migrate-pre-mailcow-db.py  release.py
src/mailadm/: __init__.py  app.py  bot.py  bot_db.py  cmdline.py  commands.py  config.py  conn.py  db.py  gen_qr.py  gen_qr_img.py  mail.py  mailcow.py  mailctl.py  util.py  web.py
src/mailadm/data/sysconfig/: README.txt  auth-mailadm.conf.ext  dovecot-sql.conf.ext  install.sh  mailadm-last_seen.service  mailadm-prune.service  mailadm-web.service  mailadm.cfg  nginx-location-fragment
src/tadm/: __init__.py  cmdline.py  config.py  mail.py  mailuser.py  web.py
tests/: conftest.py  test_app.py  test_bot.py  test_cmdline.py  test_config.py  test_conn.py  test_db.py  test_gen_qr.py  test_mail.py  test_mailcow.py  test_mailctl.py  test_mailuser.py  test_util.py  test_web.py
