[build-system]
requires = ["setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = [
  "E", "W", # pycodestyle
  "F", # Pyflakes
  "N", # pep8-naming
  "I", # isort

  "YTT", # flake8-2020
  "C4", # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "G", # flake8-logging-format
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "TID", # flake8-tidy-imports
  "DTZ", # flake8-datetimez
  "PIE", # flake8-pie
  "COM", # flake8-commas

  "PLC", # Pylint Convention
  "PLE", # Pylint Error
  "PLW", # Pylint Warning
]
lint.ignore = ["PT001", "PT016", "PT011"]
line-length = 100

[tool.black]
line-length = 100
