[metadata]
name = mailadm
version = 0.11.0
author = holger, missytake
author_email = holger@merlinux.eu, missytake@systemli.org
description = web API and CLI tool for automatic e-mail user creation/deletion
long_description = file: README.rst
url = https://github.com/deltachat/mailadm
license_file = LICENSE

[options]
zip_safe = False
packages=find:
install_requires =
    deltachat
    click>=6.0
    flask
    pillow
    qrcode
    gunicorn
    requests
    imapclient

[options.entry_points]
console_scripts =
    mailadm = mailadm.cmdline:mailadm_main

[options.packages.find]
where=src

[build_sphinx]
source-dir = doc/
build-dir = doc/_build
all_files = 1

[upload_sphinx]
upload-dir = doc/_build/html

[bdist_wheel]
universal = 1

[devpi:upload]
formats = sdist.tgz,bdist_wheel
